# rax

./: .gitignore  Cargo.toml  README.md  libnull.rlib
crates/rax/: Cargo.toml
crates/rax-anim/: Cargo.toml
crates/rax-anim/src/: lib.rs  tests.rs
crates/rax-async/: Cargo.toml
crates/rax-async/src/: lib.rs  tests.rs
crates/rax-cli/src/: main.rs
crates/rax-core/: Cargo.toml
crates/rax-core/src/: arena.rs  color.rs  geometry.rs  lib.rs  style.rs
crates/rax-dom/: Cargo.toml
crates/rax-dom/src/: event.rs  lib.rs  mutation.rs  tests.rs  tree.rs
crates/rax-dom/tests/: events.rs  tree.rs
crates/rax-dom/tests/common/: mod.rs
crates/rax-form/: Cargo.toml
crates/rax-form/src/: lib.rs
crates/rax-fs/: Cargo.toml
crates/rax-fs/src/: lib.rs
crates/rax-i18n/: Cargo.toml
crates/rax-i18n/src/: lib.rs
crates/rax-intl/: Cargo.toml
crates/rax-intl/src/: lib.rs  tests.rs
crates/rax-ios/: Cargo.toml
crates/rax-ios/src/: http.rs  ios.rs  lib.rs  storage.rs
crates/rax-keychain/: Cargo.toml
crates/rax-keychain/src/: lib.rs
crates/rax-layout/src/: lib.rs  tests.rs
crates/rax-nav/: Cargo.toml
crates/rax-nav/src/: lib.rs
crates/rax-nav/tests/: navigation.rs
crates/rax-net/: Cargo.toml
crates/rax-net/src/: lib.rs  tests.rs
crates/rax-plugin/: Cargo.toml
crates/rax-plugin/src/: lib.rs
crates/rax-reactive/: Cargo.toml
crates/rax-reactive/src/: effect.rs  handle.rs  lib.rs  middleware.rs  persisted.rs  store.rs
crates/rax-reactive/tests/: context.rs  isolation.rs  ownership.rs  signals.rs
crates/rax-runtime/: Cargo.toml
crates/rax-runtime/src/: lib.rs
crates/rax-runtime/tests/: app.rs  dynamic.rs
crates/rax-sqlite/: Cargo.toml
crates/rax-sqlite/src/: lib.rs
crates/rax-store/: Cargo.toml
crates/rax-store/src/: lib.rs  tests.rs
crates/rax-style/: Cargo.toml
crates/rax-style/src/: lib.rs  tests.rs
crates/rax-test/: Cargo.toml
crates/rax-test/src/: lib.rs
crates/rax-test/tests/: harness.rs
crates/rax-view/: Cargo.toml
crates/rax-view/src/: button.rs  camera.rs  composite.rs  container.rs  controls.rs  dynamic.rs  image.rs  indicators.rs  layout.rs  lib.rs  map.rs  modifier.rs  scroll.rs  spacer.rs  text.rs  text_input.rs  theme.rs  view.rs
crates/rax-view/tests/: composite.rs  counter.rs  gestures.rs  modifiers.rs  widgets.rs
crates/rax/src/: lib.rs
crates/raxon/: Cargo.toml  README.md
crates/raxon-anim/: Cargo.toml
crates/raxon-anim/src/: lib.rs  tests.rs
crates/raxon-async/: Cargo.toml
crates/raxon-async/src/: lib.rs  tests.rs
crates/raxon-cli/: Cargo.toml
crates/raxon-cli/src/: main.rs
crates/raxon-core/: Cargo.toml
crates/raxon-core/src/: color.rs
crates/raxon-dom/: Cargo.toml
crates/raxon-dom/src/: backend.rs  event.rs  lib.rs  mutation.rs  tree.rs
crates/raxon-dom/tests/: events.rs  tree.rs
crates/raxon-form/: Cargo.toml
crates/raxon-form/src/: lib.rs
crates/raxon-fs/: Cargo.toml
crates/raxon-i18n/: Cargo.toml
crates/raxon-i18n/src/: lib.rs
crates/raxon-intl/: Cargo.toml
crates/raxon-intl/src/: lib.rs  tests.rs
crates/raxon-ios/: Cargo.toml
crates/raxon-ios/src/: http.rs  ios.rs  lib.rs  (+1 more)
crates/raxon-keychain/: Cargo.toml
crates/raxon-layout/: Cargo.toml
crates/raxon-layout/src/: lib.rs  tests.rs
crates/raxon-log/: Cargo.toml
crates/raxon-nav/: Cargo.toml
crates/raxon-nav/src/: lib.rs
crates/raxon-nav/tests/: navigation.rs
crates/raxon-net/: Cargo.toml
crates/raxon-plugin/: Cargo.toml
crates/raxon-reactive/: Cargo.toml
crates/raxon-runtime/: Cargo.toml
crates/raxon-runtime/src/: lib.rs
crates/raxon-runtime/tests/: app.rs  dynamic.rs
crates/raxon-scheduler/: Cargo.toml
crates/raxon-sqlite/: Cargo.toml
crates/raxon-store/: Cargo.toml
crates/raxon-style/: Cargo.toml
crates/raxon-style/src/: lib.rs  tests.rs
crates/raxon-test/: Cargo.toml
crates/raxon-test/src/: lib.rs
crates/raxon-test/tests/: harness.rs
crates/raxon-testing/: Cargo.toml
crates/raxon-view/: Cargo.toml
crates/raxon-view/src/: button.rs  camera.rs  composite.rs  container.rs  controls.rs  dynamic.rs  extras.rs  image.rs  indicators.rs  layout.rs  lib.rs  list.rs  map.rs  modifier.rs  registry.rs  scroll.rs  spacer.rs  text.rs  text_input.rs  theme.rs  view.rs  web_view.rs
crates/raxon-view/tests/: composite.rs  counter.rs  gestures.rs  list.rs  modifiers.rs  widgets.rs
crates/raxon/src/: host.rs  lib.rs  platform.rs  wire.rs
crates/raxon/src/android/: mod.rs
crates/raxon/src/anim/: mod.rs  tests.rs
crates/raxon/src/async_rt/: mod.rs  tests.rs
crates/raxon/src/core/: arena.rs  color.rs  mod.rs  style.rs
crates/raxon/src/dom/: backend.rs  event.rs  mod.rs  mutation.rs  tree.rs
crates/raxon/src/form/: mod.rs
crates/raxon/src/fs/: mod.rs
crates/raxon/src/i18n/: mod.rs
crates/raxon/src/intl/: mod.rs  tests.rs
crates/raxon/src/ios/: http.rs  ios.rs  mod.rs  storage.rs
crates/raxon/src/keychain/: mod.rs
crates/raxon/src/layout/: mod.rs  tests.rs
crates/raxon/src/log/: mod.rs
crates/raxon/src/nav/: mod.rs
crates/raxon/src/net/: mod.rs  tests.rs
crates/raxon/src/plugin/: mod.rs
crates/raxon/src/reactive/: async_derived.rs  context.rs  control.rs  effect.rs  handle.rs  history.rs  middleware.rs  mod.rs  persisted.rs  reducer.rs  store.rs
crates/raxon/src/reactive/runtime/: engine.rs  mod.rs  node.rs  reactor.rs
crates/raxon/src/runtime/: mod.rs
crates/raxon/src/scheduler/: clock.rs  scheduler.rs
crates/raxon/src/sqlite/: mod.rs  native.rs
crates/raxon/src/store/: mod.rs  tests.rs
crates/raxon/src/style/: mod.rs  tests.rs
crates/raxon/src/testing/: mod.rs
crates/raxon/src/view/: button.rs  camera.rs  canvas.rs  composite.rs  container.rs  controls.rs  dynamic.rs  extras.rs  image.rs  indicators.rs  layout.rs  list.rs  map.rs  mod.rs  modifier.rs  qr.rs  registry.rs  scroll.rs  spacer.rs  text.rs  text_input.rs  theme.rs  view.rs  web_view.rs
crates/raxon/src/web/: mod.rs
docs/: ARCHITECTURE_AUDIT.md
docs/roadmap/: 00-vision-and-principles.md  01-org-and-teams.md  03-customizability.md  README.md  parity-matrix.md
(+51 files in other folders)
