[package]
name = "rax-dom"
description = "Retained element tree, widget/mutation model, and render backend seam for rax."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
rax-core = { path = "../rax-core" }
rax-reactive = { path = "../rax-reactive" }
