[package]
name = "rax-runtime"
description = "App driver for rax: mounts a view, runs layout, drains events, and drives frames."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
rax-core = { path = "../rax-core" }
rax-dom = { path = "../rax-dom" }
rax-layout = { path = "../rax-layout" }
rax-reactive = { path = "../rax-reactive" }
rax-async = { path = "../rax-async" }
rax-view = { path = "../rax-view" }
