[package]
name = "rax-store"
description = "Pluggable key-value storage and reactive persisted signals for rax."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
rax-reactive = { path = "../rax-reactive" }
