[package]
name = "rax-style"
description = "Typed design tokens and a runtime-switchable theme for the rax framework."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
rax-core = { path = "../rax-core" }
rax-reactive = { path = "../rax-reactive" }
