[package]
name = "raxon-cli"
description = "CLI for the raxon UI framework: scaffold, build, and run Rust apps on iOS, Android, and the web."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/1homsi/raxon"
keywords = ["ui", "cli", "wasm", "mobile", "ios"]
categories = ["command-line-utilities", "gui", "development-tools"]

[[bin]]
name = "raxon"
path = "src/main.rs"

[dependencies]
serde_json = "1"
