[package]
name = "raxon-layout"
description = "Flexbox layout for rax, wrapping taffy behind the engine's neutral LayoutStyle."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
raxon-core = { path = "../raxon-core", version = "0.0.1" }
raxon-dom = { path = "../raxon-dom", version = "0.0.1" }
taffy = "0.7"

[dev-dependencies]
raxon-reactive = { path = "../raxon-reactive", version = "0.0.1" }
