[package]
name = "raxon-nav"
description = "Stack navigation for rax: a signal-backed route stack and a routes view."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
raxon-reactive = { path = "../raxon-reactive", version = "0.0.1" }
raxon-view = { path = "../raxon-view", version = "0.0.1" }
raxon-anim = { path = "../raxon-anim", version = "0.0.1" }
raxon-dom = { path = "../raxon-dom", version = "0.0.1" }

[dev-dependencies]
raxon-dom = { path = "../raxon-dom", version = "0.0.1" }
raxon-runtime = { path = "../raxon-runtime", version = "0.0.1" }
raxon-test = { path = "../raxon-test", version = "0.0.1" }
