[package]
name = "raxon-style"
description = "Typed design tokens and a runtime-switchable theme for the rax framework."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
raxon-core = { path = "../raxon-core", version = "0.0.1" }
raxon-reactive = { path = "../raxon-reactive", version = "0.0.1" }
