[package]
name = "raxon-test"
description = "Headless test harness and finder/query API for rax apps (no platform needed)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
raxon-core = { path = "../raxon-core", version = "0.0.1" }
raxon-dom = { path = "../raxon-dom", version = "0.0.1" }
raxon-runtime = { path = "../raxon-runtime", version = "0.0.1" }
raxon-view = { path = "../raxon-view", version = "0.0.1" }

[dev-dependencies]
raxon-reactive = { path = "../raxon-reactive", version = "0.0.1" }
