[package]
name = "raxon-view"
description = "Declarative, macro-free typed view builder for rax. Lowers to the rax-dom element tree."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
raxon-core = { path = "../raxon-core", version = "0.0.1" }
raxon-dom = { path = "../raxon-dom", version = "0.0.1" }
raxon-reactive = { path = "../raxon-reactive", version = "0.0.1" }
raxon-net = { path = "../raxon-net", version = "0.0.1" }
raxon-async = { path = "../raxon-async", version = "0.0.1" }
raxon-anim = { path = "../raxon-anim", version = "0.0.1" }
